--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{report}
+\documentclass[12pt, draft]{labreport}
 \usepackage[utf8]{inputenc}
 
 \title{Lab Report Template}
@@ -35,6 +35,7 @@
 
 \mainmatter
 \section{Introduction}
+Something \cite{Bayer_etal_2013}
 
 \section{Materials and methods}
 
@@ -46,8 +47,9 @@
 
 \section{Acknowledgements}
 
-\section{References}
+\bibliography{cite}
 
+\backmatter
 \section{Appendix}
 
 \end{document}
