Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -83,6 +83,8 @@ Something \cite{Bayer_etal_2013} in Table \ref{tab:gauge_pos}.
 
 \backmatter
 \begin{appendices}
+\appendix
+\addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
 \section{first appendix}
 
     
