Updates from Overleaf

--- a/labreport.cls
+++ b/labreport.cls
@@ -5,51 +5,33 @@
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage{setspace}
 \onehalfspacing
-%% Table of Contents
-% \setcounter{tocdepth}{2}
-\usepackage[hidelinks]{hyperref}
-% Nomenclature
-\usepackage[stdsubgroups]{nomencl}
-\usepackage{etoolbox}
-\makenomenclature
-%% Figures and images
-\usepackage{graphicx}
-\graphicspath{ {images/} }
-\usepackage{subcaption}
-%% Tables
-\renewcommand{\arraystretch}{1.5}
-\usepackage{tabularx}
-\usepackage[tableposition=above]{caption}
-%% Equations
-\usepackage{amsmath}
-%% Citations
-\usepackage[nottoc,notlot,notlof,numbib]{tocbibind}
-\usepackage{natbib}
-\bibliographystyle{agsm}
-%% Appendix
-\usepackage[title,titletoc]{appendix}
+\usepackage{floatrow}
 
+%% ----------------------------------------------------------------
+%% Table of Contents
+% \setcounter{tocdepth}{2} % section depth to display
+\usepackage[hidelinks]{hyperref}
 
 %% ----------------------------------------------------------------
 %% Page Numbering
 
-\def\frontmatter{%
+\def\frontmatter{
     \pagenumbering{roman}
     \setcounter{page}{1}
     \renewcommand{\thesection}{\Roman{section}}
-}%
+}
 
-\def\mainmatter{%
+\def\mainmatter{
     \pagenumbering{arabic}
     \setcounter{page}{1}
     \setcounter{section}{0}
     \renewcommand{\thesection}{\arabic{section}}
-}%
+}
 
-\def\backmatter{%
+\def\backmatter{
     \setcounter{section}{0}
     \renewcommand{\thesection}{\Alph{section}}
-}%
+}
 
 %% ----------------------------------------------------------------
 %% Title Page
@@ -94,7 +76,9 @@
 
 %% ----------------------------------------------------------------
 %% Nomenclature & Abbr.
-
+\usepackage[stdsubgroups]{nomencl}
+\usepackage{etoolbox}
+\makenomenclature
 \setlength{\nomlabelwidth}{5em}
 \newenvironment{nomen}
     {
@@ -116,3 +100,88 @@
     \printnomenclature
     \newpage
     }
+
+%% ----------------------------------------------------------------
+%% Equations
+\usepackage{amsmath}
+
+%% ----------------------------------------------------------------
+%% Tables
+\floatsetup[table]{capposition=t}
+\renewcommand{\arraystretch}{1.5}
+\usepackage{tabularx}
+\usepackage{caption}
+\captionsetup{labelfont=bf, tableposition=top, figureposition=bottom}
+\newenvironment{tbl}[4][\textwidth]
+    {
+     \table[h]\centering
+     \caption{#3}\label{tab:#2}
+     \tabularx{#1}{#4} \hline
+    }
+    {
+     \endtabularx
+     \endtable
+    }
+
+%% ----------------------------------------------------------------
+%% Figures
+\floatsetup[figure]{capposition=b}
+\usepackage{graphicx}
+\graphicspath{ {images/} }
+\usepackage{subcaption}
+\newenvironment{img}[2]
+    {
+    \figure[h]\centering
+    \caption{#2}\label{fig:#1}%
+    }
+    {
+    \endfigure
+    }
+
+\newenvironment{subimg}[4][\textwidth]
+    {
+    \subfigure[h]{#1}\centering
+    \src{#4}
+    \subcaption{#3}\label{fig:#2}%
+    }
+    {
+    \endsubfigure
+    }
+
+\newcommand{\src}[2][\textwidth]{\includegraphics[width=#1]{#2}}
+
+%% ----------------------------------------------------------------
+%% Citations
+\usepackage[nottoc,notlot,notlof,numbib]{tocbibind}
+\usepackage{natbib}
+\bibliographystyle{agsm}
+
+%% ----------------------------------------------------------------
+%% Appendix
+\usepackage[title,titletoc]{appendix}
+
+%% ----------------------------------------------------------------
+%% Code blocks
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=3mm,
+  belowskip=3mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\small\ttfamily},
+  numbers=none,
+  numberstyle=\tiny\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true,
+  tabsize=3
+}
